<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search" />
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title=""
        app:showAsAction="always">
    <menu>
    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_cart_24"
        android:title="@string/cart" />

    <item
        android:id="@+id/menu_manage"
        android:icon="@drawable/ic_manager_24"
        android:title="@string/manage" />
    </menu>
    </item>
</menu>
