<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:background="@color/bg"

        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgProductCart"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="100dp"/>
        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="100dp">
            <TextView
                android:id="@+id/tvNameProductCart"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/name_product"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/tvExpiryProductCart"
                    android:textColor="@color/red"
                    android:text="@string/expiry_product"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:id="@+id/tvPriceProductCart"
                    android:textColor="@color/purple_700"
                    android:gravity="right"
                    android:text="@string/price_product"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/tvQuantityProductCart"
                    android:layout_marginTop="3dp"
                    android:text="Số lượng : 1"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvTotalP"
                    android:textColor="@color/purple_700"
                    android:gravity="right"
                    android:text="@string/price_product"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:background="@color/black"
            android:layout_width="2dp"
            android:layout_height="match_parent"/>
        <ImageButton
            android:id="@+id/imgDelete"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_baseline_cancel_24"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <View
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>
</LinearLayout>
