<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_layout"
    android:layout_marginTop="7dp"
    android:layout_marginRight="7dp"
    android:layout_marginLeft="7dp"
    android:background="@color/purple_700"
    app:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <TextView
                android:id="@+id/tvDiscountProduct"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:alpha="0.75"
                android:background="@drawable/bg_custom_view_discount"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/discount"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="ObsoleteLayoutParam" />

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tvNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imgProduct"
                android:background="#A6EC2323"
                android:gravity="center_horizontal"
                android:padding="7dp"
                android:text="@string/name_product"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvPriceDiscount"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/red"
                android:text="@string/price_product"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvPriceProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="180.000 vnđ"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="@color/red" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:text="Hạn sử dụng :"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/red"
                android:gravity="right"
                android:text="@string/expiry_product"
                android:textStyle="bold"
                android:textSize="22sp"
                android:id="@+id/tvExpiryProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_star_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/ic_star_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/ic_star_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/ic_star_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/ic_star_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
