<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">
    <LinearLayout
        android:background="@drawable/bg_view_black"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/red"
            android:id="@+id/tvLogin"
            android:textSize="26sp"
            android:layout_margin="3dp"
            android:text="Đăng nhập"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView

            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:text="/"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/Gray"
            android:id="@+id/tvRegister"
            android:textSize="26sp"
            android:layout_margin="3dp"
            android:text="Đăng Ký"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/lnLogin"
        android:gravity="center"
        android:background="@drawable/bg_view_black"
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="500dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Đăng Nhập"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtLoginAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Tài Khoản"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtLoginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="Mật Khẩu"
            android:textColor="@color/black" />

        <Button
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_custom_button"
            android:layout_marginTop="10dp"
            android:onClick="clickLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Đăng nhập" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:padding="10dp"
        android:id="@+id/lnRegister"
        android:gravity="center"
        android:background="@drawable/bg_view_black"
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="500dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Đăng Ký"
            android:textColor="@color/teal_200"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:textSize="16sp"
            android:id="@+id/edtRegisterAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Tài Khoản"
            android:textColor="@color/black" />

        <EditText
            android:textSize="16sp"
            android:id="@+id/edtRegisterPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Mật Khẩu"
            android:textColor="@color/black" />
        <EditText
            android:textSize="16sp"
            android:id="@+id/edtRegisterPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Số điện thoại"
            android:textColor="@color/black" />
        <EditText
            android:textSize="16sp"
            android:id="@+id/edtRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Họ Tên"
            android:textColor="@color/black" />
        <TextView
            android:textSize="16sp"
            android:id="@+id/tvRegisterPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/khach_hang"
            android:textColor="@color/black" />
        <TextView
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:id="@+id/tvRegisterLvRank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:text="@string/rank_3"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:textSize="16sp"
            android:id="@+id/tvRegisterImgRank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lines="1"
            android:text="@string/linkRank_3"
            android:ems="16"
            android:ellipsize="end"
            android:textColor="@color/black" />
        <Button
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_custom_button"
            android:layout_marginTop="10dp"
            android:onClick="clickRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Đăng Ký" />
    </LinearLayout>

</LinearLayout>